# projeto

./: Procfile  db.sqlite3  manage.py  pyproject.toml  requirements.txt
core/: admin.py  models.py  serializers.py  views.py
core/admin/: __init__.py  artistas.py  critica.py  elenco.py  filmes.py  genero.py  plataforma.py  usuario.py
core/migrations/: 0001_initial.py  0002_alter_critica_nota.py  0002_alter_filmes_duracao.py  0002_critica.py  0002_remove_artistas_titulo.py  0003_alter_genero_options.py  0003_artistas_titulo_remove_filmes_nome_genero_and_more.py  0003_elenco.py  0004_usuario.py  0005_artistas.py  0006_plataforma_alter_genero_options.py
core/models/: __init__.py  artistas.py  critica.py  elenco.py  filmes.py  genero.py  plataforma.py
core/serializers/: __init__.py  artistas.py  critica.py  elenco.py  filmes.py  genero.py  plataforma.py
core/views/: __init__.py  artistas.py  critica.py  elenco.py  filmes.py  genero.py  plataforma.py  usuario.py
lumiere/: asgi.py  settings.py  urls.py  wsgi.py
